Fixed text clipping

--- a/src/components/SectionDApp/SectionDApp.scss
+++ b/src/components/SectionDApp/SectionDApp.scss
@@ -273,6 +273,7 @@
                         text-align: center;
                         .item {
                             width: 23%;
+                            font-size: 0.9em;
                         }
                         .one {
                             padding: 0 5%;
